--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,10 +1,10 @@
 ---
-- name: "restart tftp"
-  service:
+- name: "Restart tftp"
+  ansible.builtin.service:
     name: tftp
     state: restarted
 
-- name: "restart http"
-  service:
+- name: "Restart http"
+  ansible.builtin.service:
     name: http
     state: restarted
