--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,21 +1,23 @@
 ---
 galaxy_info:
-  author: "Philippe leal"
-  description: "Install and configure tftp"
+  author: lotusnoir
   role_name: apps_tftp
-  license: "license: Apache License, Version 2.0"
+  description: "Deploy a tftp app."
+  license: "Apache License, Version 2.0"
   min_ansible_version: 2.8
 
   platforms:
     - name: "Ubuntu"
       versions:
-        - "bionic"
+        - "focal"
+        - "jammy"
     - name: "Debian"
       versions:
         - "buster"
+        - "bullseye"
+        - "bookworm"
 
   galaxy_tags:
     - tftp
-    - python
 
 dependencies: []
