--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -27,7 +27,7 @@
       ansible.builtin.file:
         path: '{{ tftp_install_dir }}'
         state: directory
-        mode: 0755
+        mode: '0755'
 
     - name: "Copy tftp.py"
       ansible.builtin.copy:
@@ -39,7 +39,7 @@
       ansible.builtin.template:
         src: tftp.service.j2
         dest: /etc/systemd/system/tftp.service
-        mode: 0640
+        mode: '0640'
 
     - name: "Start tftp.service"
       ansible.builtin.service:
@@ -61,7 +61,7 @@
       ansible.builtin.template:
         src: http.service.j2
         dest: /etc/systemd/system/http.service
-        mode: 0640
+        mode: '0640'
 
     - name: "Start http.service"
       ansible.builtin.service:
