--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,11 @@ molecule_ubuntu20:
     MOLECULE_DOCKER_COMMAND: "--cap-add NET_ADMIN"
   script:
     - MOLECULE_DISTRIB=ubuntu20 molecule test
+molecule_ubuntu24:
+  stage: molecule
+  image: lotusnoir/molecule_play:latest
+  script:
+    - MOLECULE_DISTRIB=ubuntu24 molecule test
 
 ######################################################
 # GENERATE CHANGELOG FILE
@@ -52,6 +57,7 @@ changelog:
     - molecule_debian10
     - molecule_ubuntu22
     - molecule_ubuntu20
+    - molecule_ubuntu24
   artifacts:
     paths:
       - CHANGELOG.md
@@ -60,7 +66,6 @@ changelog:
     - npm install -g auto-changelog
   script:
     - auto-changelog -t keepachangelog --sort-commits date-desc --hide-empty-releases --hide-credit -l 10 -b 10
-
 
 ##################################################
 # PUSH CODE WHEN ALL TEST OK
