--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,13 +4,14 @@ galaxy_info:
   role_name: apps_tftp
   description: "Deploy a tftp app."
   license: "Apache License, Version 2.0"
-  min_ansible_version: 2.8
+  min_ansible_version: "2.8"
 
   platforms:
     - name: "Ubuntu"
       versions:
         - "jammy"
         - "focal"
+        - "noble"
     - name: "Debian"
       versions:
         - "buster"
