fix support (debian13) fix

--- a/molecule/all/molecule.yml
+++ b/molecule/all/molecule.yml
@@ -14,6 +14,7 @@ scenario:
     - idempotence
     # - verify
     - destroy
+
 platforms:
   - name: apps-tftp-ubuntu20
     image: lotusnoir/ansible_molecule_test_images:ubuntu20
@@ -23,6 +24,8 @@ platforms:
     capabilities: ["NET_ADMIN"]
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    groups:
+      - python3
   - name: apps-tftp-ubuntu22
     image: lotusnoir/ansible_molecule_test_images:ubuntu22
     pre_build_image: true
@@ -41,13 +44,15 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
       - python3
-  - name: apps-tftp-debian10
-    image: lotusnoir/ansible_molecule_test_images:debian10
+  - name: apps-tftp-debian12
+    image: lotusnoir/ansible_molecule_test_images:debian12
     pre_build_image: true
     cgroupns_mode: host
     privileged: true
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    groups:
+      - python3
   - name: apps-tftp-debian11
     image: lotusnoir/ansible_molecule_test_images:debian11
     pre_build_image: true
@@ -57,8 +62,17 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
       - python3
-  - name: apps-tftp-debian12
-    image: lotusnoir/ansible_molecule_test_images:debian12
+  - name: apps-tftp-debian10
+    image: lotusnoir/ansible_molecule_test_images:debian10
+    pre_build_image: true
+    cgroupns_mode: host
+    privileged: true
+    volumes:
+      - /sys/fs/cgroup:/sys/fs/cgroup:rw
+    groups:
+      - python3
+  - name: apps-tftp-debiantrixie
+    image: lotusnoir/ansible_molecule_test_images:debiantrixie
     pre_build_image: true
     cgroupns_mode: host
     privileged: true
@@ -72,6 +86,17 @@ provisioner:
   connection_options:
     ansible_remote_tmp: /tmp
     ansible_python_interpreter: auto_silent
+  config_options:
+    defaults:
+      roles_path: "${HOME}/.ansible/roles:/usr/share/ansible/roles:/etc/ansible/roles:$MOLECULE_PROJECT_DIRECTORY/.."
+      callbacks_enabled: timer, profile_tasks, profile_roles
+      verbosity: 3
+      forks: 20
+      host_key_checking: false
+    ssh_connection:
+      pipelining: true
+      ssh_args: -o ControlMaster=auto -o ControlPersist=600s
+  log: true
   playbooks:
     prepare: prepare.yml
     converge: playbook.yml
@@ -83,6 +108,8 @@ provisioner:
       bullseye:
         ansible_python_interpreter: "/usr/bin/python3.9"
       bookworm:
+        ansible_python_interpreter: "/usr/bin/python3.9"
+      trixie:
         ansible_python_interpreter: "/usr/bin/python3.9"
 
 verifier:
