--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,14 +9,15 @@ galaxy_info:
   platforms:
     - name: "Ubuntu"
       versions:
-        - "jammy"
         - "focal"
+        - "jammy"
         - "noble"
     - name: "Debian"
       versions:
         - "buster"
         - "bullseye"
         - "bookworm"
+        - "trixie"
 
   galaxy_tags:
     - tftp
