--- a/molecule/all/molecule.yml
+++ b/molecule/all/molecule.yml
@@ -71,8 +71,8 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:rw
     groups:
       - python3
-  - name: apps-tftp-debiantrixie
-    image: lotusnoir/ansible_molecule_test_images:debiantrixie
+  - name: apps-tftp-debian13
+    image: lotusnoir/ansible_molecule_test_images:debian13
     pre_build_image: true
     cgroupns_mode: host
     privileged: true
